--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 numpy>=1.16.2
 pandas>=0.25.3
 tqdm>=4.38.0
-keras>=2.2.4
 scipy>=1.1.0
-tensorflow>=1.14.0
-scikit-learn==0.20.3
+scikit-learn>=0.20.3
 matplotlib>=3.3.0
+torch>=2.0.0
+torchvision>=0.15.0
