--- a/environment.yml
+++ b/environment.yml
@@ -192,7 +192,7 @@ dependencies:
   - networkx=3.1=pyhd8ed1ab_0
   - notebook=6.5.7=pyha770c72_0
   - notebook-shim=0.2.4=pyhd8ed1ab_0
-  - numpy=1.21.2=py38he2449b9_0
+  - numpy=1.24.4=py38h59b608b_0
   - openh264=2.3.1=hcb278e6_2
   - openldap=2.6.10=he970967_0
   - openssl=3.6.0=h26f9b46_0
