--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,6 @@ channels:
   - pytorch
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge
   - conda-forge
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
@@ -228,7 +226,6 @@ dependencies:
   - python-fastjsonschema=2.20.0=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python_abi=3.8=2_cp38
-  - pytorch=2.4.1=py3.8_cpu_0
   - pytorch-mutex=1.0=cpu
   - pytz=2024.2=pyhd8ed1ab_0
   - pyyaml=6.0.2=py38h2019614_0
@@ -259,8 +256,6 @@ dependencies:
   - tk=8.6.15=h54e0aa7_0
   - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.2=pyhd8ed1ab_0
-  - torchaudio=2.4.1=py38_cpu
-  - torchvision=0.20.0=py38_cpu
   - tornado=6.4.1=py38hfb59056_0
   - tqdm=4.62.3=pyhd8ed1ab_0
   - traitlets=5.14.3=pyhd8ed1ab_0
@@ -305,4 +300,22 @@ dependencies:
   - zlib=1.3.1=hb25bd0a_0
   - zstandard=0.19.0=py38h0a891b7_0
   - zstd=1.5.7=hb78ec9c_6
+  - pip:
+      - fsspec==2025.3.0
+      - nvidia-cublas-cu12==12.4.2.65
+      - nvidia-cuda-cupti-cu12==12.4.99
+      - nvidia-cuda-nvrtc-cu12==12.4.99
+      - nvidia-cuda-runtime-cu12==12.4.99
+      - nvidia-cudnn-cu12==9.1.0.70
+      - nvidia-cufft-cu12==11.2.0.44
+      - nvidia-curand-cu12==10.3.5.119
+      - nvidia-cusolver-cu12==11.6.0.99
+      - nvidia-cusparse-cu12==12.3.0.142
+      - nvidia-nccl-cu12==2.20.5
+      - nvidia-nvjitlink-cu12==12.4.99
+      - nvidia-nvtx-cu12==12.4.99
+      - torch==2.4.1+cu124
+      - torchaudio==2.4.1+cu124
+      - torchvision==0.19.1+cu124
+      - triton==3.0.0
 prefix: /data/miniconda/envs/privGAN
